<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Determinar">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Determinar">


        <TextView
            android:id="@+id/tvTitulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp"
            android:layout_gravity="center"
            android:text="@string/titulo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNombreReci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginBottom="20sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEdadReci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginBottom="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text=""
            android:textSize="20sp" />

        <Button
            android:id="@+id/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_gravity="center"
            android:text="@string/volver" />

        <TextView
            android:id="@+id/tvEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginBottom="20sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text=""
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/imagen" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>